<resources>
    <string name="app_name">Intent Learning</string>
    <string name="login_app_title">ClubSpace</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
</resources>